[package]
name = "komorebik"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.13.2", features = ["toml"] }
dirs = "4.0.0"
eyre = "0.6.8"
komorebi-core = { git = "https://github.com/LGUG2Z/komorebi.git" }
lazy_static = "1.4.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
serde = { version = "1.0.144", features = ["derive"] }
uds_windows = "1.0.2"

[dependencies.windows]
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
version = "0.39.0"
